[package]
name = "libautonomi"
version = "0.1.0"
edition = "2021"

[features]
local-discovery = ["sn_client/local-discovery"]

[dependencies]
bip39 = "2.0.0"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
libp2p = "0.53"
rand = "0.8.5"
rmp-serde = "1.1.1"
self_encryption = "0.29.2"
serde = { version = "1.0.133", features = ["derive", "rc"] }
sn_client = { path = "../sn_client" }
sn_networking = { path = "../sn_networking" }
sn_protocol = { version = "0.17.5", path = "../sn_protocol" }
sn_transfers = { path = "../sn_transfers", version = "0.18.9" }
thiserror = "1.0.23"
tokio = { version = "1.35.0", features = ["sync"] }
tracing = { version = "~0.1.26" }
walkdir = "2.5.0"
xor_name = "5.0.0"
wasmtimer = "0.2.0"
wasm-bindgen = "0.2"  # For WebAssembly bindings
wasm-bindgen-futures = "0.4.40"
#web-sys = { version = "0.3", features = ["console"] }  # Enables console log
console_log = "0.2"   # Optional: For easy logging
log = "0.4"           # Optional: Log facade
futures = "0.3"  # For asynchronous programming

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen-test = "0.3.43"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2.12", features = ["js"] }
libp2p = { version = "0.53", features = [
    "tokio",
    "dns",
    "kad",
    "tcp",
    "macros",
    "request-response",
    "cbor",
    "identify",
    "noise",
    "yamux",
    "websocket-websys",
    "wasm-bindgen",
] }






[lints]
workspace = true
